--- a/src/main/webapp/assets/css/tatami.css
+++ b/src/main/webapp/assets/css/tatami.css
@@ -7,11 +7,11 @@
 }
 
 .status-top-rounded {
-    border-radius: 5px 5px 0px 0px;
+    border-radius: 5px 5px 0 0;
 }
 
 .status-bottom-rounded {
-    border-radius: 0px 0px 5px 5px;
+    border-radius: 0 0 5px 5px;
 }
 
 .status-both-rounded {
@@ -36,12 +36,12 @@
     }
 
     #tatamiBody {
-        padding: 0px;
+        padding: 0;
     }
 }
 
 .noRadius {
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 .noCollapse {
@@ -53,7 +53,7 @@
 }
 
 .noRadius {
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 #basicMap {
@@ -79,7 +79,7 @@
 
 @media screen and (min-width: 767px) {
     #tatamiBody {
-        padding: 10px 15px 10px 0px;
+        padding: 10px 15px 10px 0;
     }
 }
 
@@ -97,7 +97,7 @@ h4 {
 }
 
 .well h4 {
-    margin: 0px;
+    margin: 0;
 }
 
 .labelSizeNormal {
@@ -124,7 +124,7 @@ h4 {
 }
 
 .nomargin {
-    margin: 0px;
+    margin: 0;
 }
 
 .file-table {
@@ -143,7 +143,7 @@ h4 {
 }
 
 div.jGrowl-notification {
-    background-color : none;
+    background-color : transparent;
     opacity : 1;
 }
 
@@ -199,7 +199,7 @@ div.jGrowl-notification {
 .avatar-float-left-container {
     margin-left: 15px;
     margin-top: 15px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-right: 15px;
 }
 
@@ -291,9 +291,9 @@ div.jGrowl-notification {
 }
 
 .page-header {
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 .img-rounded {
@@ -331,7 +331,7 @@ div.jGrowl-notification {
 
 /*.tatam, .useritem {*/
 .useritem {
-    padding: 0px 5px 0px 0px;
+    padding: 0 5px 0 0;
     overflow: hidden;
     display: none;
     border: 1px solid #CCCCCC;
@@ -347,7 +347,7 @@ div.jGrowl-notification {
 }
 
 .useritemmini {
-    padding: 0px 5px 1px 35px;
+    padding: 0 5px 1px 35px;
     overflow: hidden;
     display: none;
 }
@@ -425,7 +425,7 @@ div.jGrowl-notification {
 
 .tatam > header {
     padding-bottom: 0;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .tatams {
@@ -433,12 +433,12 @@ div.jGrowl-notification {
 }
 
 .tatam > div:first-child, .useritem > div:first-child {
-    padding: 5px 10px 0px 10px;
+    padding: 5px 10px 0 10px;
 }
 
 .tatams > * {
-    margin-bottom: 0px;
-    padding-bottom: 0px;
+    margin-bottom: 0;
+    padding-bottom: 0;
 }
 
 @media screen and (min-width: 767px) {
@@ -468,7 +468,7 @@ div.jGrowl-notification {
 
 /*
 .tatams-discussion {
-    margin-top: 0px;
+    margin-top: 0;
     margin-left: -60px;
 }
 */
@@ -517,7 +517,7 @@ div.jGrowl-notification {
 /* Style for degradated fileUpload on IE8 */
 .controlsIE {
     text-align: left;
-    vertical-align: center;
+    vertical-align: middle;
     margin-bottom: 20px;
 }
 
@@ -538,7 +538,7 @@ div.jGrowl-notification {
     background-color: white;
     border-top: 1px solid #CCCCCC;
     border-bottom: 1px solid #CCCCCC;
-    padding: 0px;
+    padding: 0;
     margin-bottom: -1px;
     overflow: hidden;
     display: none;
@@ -551,11 +551,11 @@ div.jGrowl-notification {
 }
 
 .tatam-first {
-    border-top: 0px;
+    border-top: 0;
 }
 
 .tatam-last {
-    border-bottom: 0px;
+    border-bottom: 0;
 }
 
 @media screen and (min-width: 767px) {
@@ -579,13 +579,13 @@ div.jGrowl-notification {
     border-left: 1px solid #CCCCCC;
     border-right: 1px solid #CCCCCC;
     background-color: white;
-    margin-bottom: 0px;
-    border-radius: 5px 5px 0px 0px;
+    margin-bottom: 0;
+    border-radius: 5px 5px 0 0;
 }
 
 .tatams-content h3 {
     padding: 5px 10px 5px 10px;
-    margin: 0px;
+    margin: 0;
     font-weight: normal;
     font-size: 1.4em;
 }
@@ -596,11 +596,11 @@ div.jGrowl-notification {
 }
 
 .tatams-content hr {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     border-top: 1px solid #CCCCCC;
     margin-bottom: -2px;
-    margin-top: 0px;
+    margin-top: 0;
 }
 
 .tatams-container {
@@ -628,11 +628,11 @@ div.jGrowl-notification {
 
 .nav-justified > li {
     border: 1px solid #CCCCCC;
-    padding: 0px;
+    padding: 0;
 }
 
 .nav-tabs > li > a {
-    border-radius: 0px;
+    border-radius: 0;
 }
 
 .homebody-nav {
@@ -654,7 +654,7 @@ div.jGrowl-notification {
 .typeahead.dropdown-menu.hasCategory {
     /*width: 280px;*/
     background: #EDEDED;
-    padding: 0px;
+    padding: 0;
 }
 
 @media screen and (max-width: 767px) {
@@ -773,7 +773,7 @@ div.jGrowl-notification {
 
 .nav-collapse .dropdown-menu .divider {
     display: block;
-    height: 0px;
+    height: 0;
     border-bottom: 1px solid #CCCCCC;
     -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
     -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(255, 255, 255, 0.1);
@@ -793,15 +793,15 @@ div.jGrowl-notification {
 }
 
 .searchbody h3 {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     font-weight: normal;
     font-size: 1.4em;
 }
 
 .searchbody hr {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     border-top: 1px solid #CCCCCC;
     margin-top: 10px;
 }
@@ -826,11 +826,11 @@ div.jGrowl-notification {
 }
 
 .statusitem-footer {
-    padding: 0px;   
+    padding: 0;   
 }
 
 .markdown p {
-    margin: 0px 0px 0.5em 0px;
+    margin: 0 0 0.5em 0;
 }
 
 #current {
@@ -839,8 +839,8 @@ div.jGrowl-notification {
 }
 
 #before {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
 }
 
 #after {
@@ -881,7 +881,7 @@ div.jGrowl-notification {
     .button-ios {
         margin-left: -2px;
         margin-right: -2px;
-        margin: 2px 4px 2px 0px; 
+        margin: 2px 4px 2px 0; 
     }
 
     .button-ios-right {
@@ -975,7 +975,7 @@ div.jGrowl-notification {
 }
 
 .slider-container .slider-container-header {
-    height: 0px;
+    height: 0;
     text-align: right;
     margin-right: 5px;
 }
