Added error banner for when registration fails

--- a/src/main/webapp/app/components/login/LoginView.html
+++ b/src/main/webapp/app/components/login/LoginView.html
@@ -8,6 +8,7 @@
     <div ng-show="$stateParams.action === 'lostPassword'" class="alert alert-info" translate="tatami.login.passwordEmailSent"></div>
     <div ng-show="$stateParams.action === 'lostPasswordFailure'" class="alert alert-danger" translate="tatami.login.unregisteredEmail"></div>
     <div ng-show="$stateParams.action === 'register'" class="alert alert-info" translate="tatami.login.registrationEmail"></div>
+    <div ng-show="$stateParams.action === 'registerFailure'" class="alert alert-danger" translate="tatami.login.registrationFailure"></div>
     <div class="col-span-12">
 
 
