--- a/web/src/main/webapp/app/components/login/manual/ManualLoginView.html
+++ b/web/src/main/webapp/app/components/login/manual/ManualLoginView.html
@@ -6,10 +6,10 @@
         <form ng-submit="login()" accept-charset="utf-8" id="loginForm">
             <fieldset>
                 <div class="control-group">
-                    <input id="j_username" name="j_username" type="email" ng-model="user.email" required="required" placeholder="{{ 'tatami.login.email' | translate }}" autofocus>
+                    <input id="username" name="username" type="email" ng-model="user.email" required="required" placeholder="{{ 'tatami.login.email' | translate }}" autofocus>
                 </div>
                 <div class="control-group">
-                    <input id="j_password" name="j_password" type="password" ng-model="user.password" required="required" placeholder="{{ 'tatami.login.password' | translate }}">
+                    <input id="password" name="password" type="password" ng-model="user.password" required="required" placeholder="{{ 'tatami.login.password' | translate }}">
                 </div>
                 <div class="control-group">
                     <input id="_spring_security_remember_me" ng-model="user.remember" name="_spring_security_remember_me" type="checkbox">
