Tatmi Mobile: Update 'Account' to 'Favorites'

--- a/mobile/www/app/components/chats/tab-chats.html
+++ b/mobile/www/app/components/chats/tab-chats.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Mentions">
     <ion-content>
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
