--- a/mobile/www/app/components/dash/tab-dash.html
+++ b/mobile/www/app/components/dash/tab-dash.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Dashboard">
+<ion-view view-title="Timeline">
     <ion-content class="padding">
         <div class="list card">
             <div class="item item-divider">Recent Updates</div>
