Tatami Mobile: Added Logo, Follow button and post button above page title header

--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -1,4 +1,4 @@
-<ion-view name="login-view">
+<ion-view name="login-view" view-title="Login">
     <ion-content class="padding">
         <div class="list list-inset">
             <label class="item item-input">
