--- a/mobile/www/app/components/login/login.html
+++ b/mobile/www/app/components/login/login.html
@@ -8,7 +8,16 @@
                 <input type="password" placeholder="Password" ng-model="user.password">
             </label>
         </div>
-        <button ng-disabled="!user.email && !user.password" class="button button-block button-calm" ng-click="login()">Login</button>
+
+        <div class="padding">
+            <button ng-disabled="!user.email && !user.password" class="button button-block button-calm" ng-click="login()">Login</button>
+        </div>
+        <div class="padding">
+            <button ng-click="googleLogin()" class="button button-block button-stable">
+                Log into Google
+            </button>
+        </div>
+
         <div ng-if="shown" class="bar bar-positive">
             <h1 class="title">Logged In!</h1>
         </div>
