Tatami Mobile: Update 'Chat' to read 'Mention'

--- a/mobile/www/app/components/mentions/mentions-detail.html
+++ b/mobile/www/app/components/mentions/mentions-detail.html
@@ -4,11 +4,11 @@
   The FriendsCtrl pulls data from the Friends service (service.js)
   The Friends service returns an array of friend data
 -->
-<ion-view view-title="{{chat.name}}">
+<ion-view view-title="{{mention.name}}">
     <ion-content class="padding">
-        <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
+        <img ng-src="{{mention.face}}" style="width: 64px; height: 64px">
         <p>
-            {{chat.lastText}}
+            {{mention.lastText}}
         </p>
     </ion-content>
 </ion-view>
