--- a/mobile/www/app/components/favorites/tab-favorites.html
+++ b/mobile/www/app/components/favorites/tab-favorites.html
@@ -1,9 +1,16 @@
 <ion-view view-title="Favorites">
     <ion-content>
         <ion-list>
-            <ion-toggle  ng-model="settings.enableFriends">
-                Enable Friends
-            </ion-toggle>
+            <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="favorite in favorites" type="item-text-wrap" href="#/tab/favorites/{{favorite.id}}">
+                <img ng-src="{{favorite.face}}">
+                <h2>{{favorite.name}}</h2>
+                <p>{{favorite.lastText}}</p>
+                <i class="icon ion-chevron-right icon-accessory"></i>
+
+                <ion-option-button class="button-assertive" ng-click="remove(favorite)">
+                    Delete
+                </ion-option-button>
+            </ion-item>
         </ion-list>
     </ion-content>
 </ion-view>
