--- a/mobile/www/app/components/timeline/timeline-detail.html
+++ b/mobile/www/app/components/timeline/timeline-detail.html
@@ -1,8 +1,8 @@
-<ion-view view-title="{{lineItem.name}}">
+<ion-view view-title="{{lineItem.username}}">
     <ion-content class="padding">
-        <img ng-src="{{lineItem.face}}" style="width: 64px; height: 64px">
+        <img src="../../../img/test-prof.png" style="width: 64px; height: 64px">
         <p>
-            {{lineItem.lastText}}
+            {{lineItem.content}}
         </p>
     </ion-content>
 </ion-view>
