Redirect user to dash tab if logged in, and allow the user to log in

--- a/mobile/www/app/components/dash/tab-dash.html
+++ b/mobile/www/app/components/dash/tab-dash.html
@@ -1,6 +1,13 @@
 <ion-view view-title="Timeline">
     <ion-content class="padding">
         <div class="list card">
+            <div class="item item-body">
+                <div>
+                    Welcome {{ user.username }}
+                </div>
+            </div>
+        </div>
+        <div class="list card">
             <div class="item item-divider">Recent Updates</div>
             <div class="item item-body">
                 <div>
