Add three tabs for the following page - sueggested, currently following, and current followers

--- a/mobile/www/app/components/follow/suggested/suggested.html
+++ b/mobile/www/app/components/follow/suggested/suggested.html
@@ -1,11 +1,15 @@
 <ion-view view-title="Who to Follow">
     <ion-content>
         <div class="padding">
-            Follow him..
-            <!--<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="lineItem in lineItems" type="item-text-wrap" href="#/tab/timeline/{{lineItem.timelineId}}">-->
+            Suggested
+            <!--Follow him..-->
+            <!--<ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="lineItem in lineItems"-->
+                      <!--type="item-text-wrap" href="#/tab/timeline/{{lineItem.timelineId}}">-->
                 <!--<img src="../../../img/test-prof.png">-->
+
                 <!--<div class="inline">-->
                     <!--<span class="pull-right date"> &#183; {{lineItem.prettyPrintStatusDate}}</span>-->
+
                     <!--<h2>{{lineItem.firstName}} {{lineItem.lastName}}</h2>-->
                     <!--<span class="subheading">{{lineItem.username}} @{{lineItem.username}}</span>-->
                 <!--</div>-->
