Use resolve in timeline routing to fetch data. Clear ionic history cache before transitioning back to timeline after a post is made

--- a/mobile/www/app/components/timeline/tab-timeline.html
+++ b/mobile/www/app/components/timeline/tab-timeline.html
@@ -2,7 +2,7 @@
     <ion-content>
         <ion-list>
             <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="lineItem in lineItems" type="item-text-wrap" href="#/tab/timeline/{{lineItem.timelineId}}">
-                <img ng-src="{{ getAvatarURL(lineItem.avatar) }}" />
+                <img ng-src="{{ lineItem.avatarURL }}" />
 
                 <div class="profile-name">
                     <h2 class="inline">{{lineItem.firstName}} {{lineItem.lastName}}</h2>
